Finished dealing cards for player and machine 1 card turn-by-turn.

--- a/AutoJack/AutoJack.csproj
+++ b/AutoJack/AutoJack.csproj
@@ -54,6 +54,7 @@
     <Compile Include="common\DeckShuffle.Designer.cs">
       <DependentUpon>DeckShuffle.cs</DependentUpon>
     </Compile>
+    <Compile Include="common\Utility.cs" />
     <Compile Include="Controller\BetController.cs" />
     <Compile Include="Controller\EngineController.cs" />
     <Compile Include="Controller\GameController.cs" />
@@ -158,43 +159,74 @@
   <ItemGroup>
     <None Include="resources\AppLogo.jpg" />
     <Content Include="resources\deck\AceClubs.png" />
+    <None Include="resources\deck\AceClubs1.png" />
     <Content Include="resources\deck\AceDiamonds.png" />
+    <None Include="resources\deck\AceDiamonds1.png" />
     <Content Include="resources\deck\AceHearts.png" />
+    <None Include="resources\deck\AceHearts1.png" />
     <Content Include="resources\deck\AceSpades.png" />
+    <None Include="resources\deck\AceSpades1.png" />
     <Content Include="resources\deck\cardback.jpg" />
     <Content Include="resources\deck\deckshuffling.gif" />
     <Content Include="resources\deck\draw.jpg" />
     <Content Include="resources\deck\EightClubs.png" />
+    <None Include="resources\deck\EightClubs1.png" />
     <Content Include="resources\deck\EightDiamonds.png" />
+    <None Include="resources\deck\EightDiamonds1.png" />
     <Content Include="resources\deck\EightHearts.png" />
+    <None Include="resources\deck\EightHearts1.png" />
     <Content Include="resources\deck\EightSpades.png" />
+    <None Include="resources\deck\EightSpades1.png" />
     <Content Include="resources\deck\FiveClubs.png" />
+    <None Include="resources\deck\FiveClubs1.png" />
     <Content Include="resources\deck\FiveDiamonds.png" />
+    <None Include="resources\deck\FiveDiamonds1.png" />
     <Content Include="resources\deck\FiveHearts.png" />
+    <None Include="resources\deck\FiveHearts1.png" />
     <Content Include="resources\deck\FiveSpades.png" />
+    <None Include="resources\deck\FiveSpades1.png" />
     <Content Include="resources\deck\FourClubs.png" />
+    <None Include="resources\deck\FourClubs1.png" />
     <Content Include="resources\deck\FourDiamonds.png" />
+    <None Include="resources\deck\FourDiamonds1.png" />
     <Content Include="resources\deck\FourHearts.png" />
+    <None Include="resources\deck\FourHearts1.png" />
     <Content Include="resources\deck\FourSpades.png" />
+    <None Include="resources\deck\FourSpades1.png" />
     <Content Include="resources\deck\JackClubs.png" />
+    <None Include="resources\deck\JackClubs1.png" />
     <Content Include="resources\deck\JackDiamonds.png" />
+    <None Include="resources\deck\JackDiamonds1.png" />
     <Content Include="resources\deck\JackHearts.png" />
+    <None Include="resources\deck\JackHearts1.png" />
     <Content Include="resources\deck\JackSpades.png" />
+    <None Include="resources\deck\jess.jpg" />
+    <None Include="resources\deck\joker.jpg" />
+    <None Include="resources\deck\JackSpades1.png" />
     <Content Include="resources\deck\KingClubs.png" />
+    <None Include="resources\deck\KingClubs1.png" />
     <Content Include="resources\deck\KingDiamonds.png" />
+    <None Include="resources\deck\KingDiamonds1.png" />
     <Content Include="resources\deck\KingHearts.png" />
+    <None Include="resources\deck\KingHearts1.png" />
     <Content Include="resources\deck\KingSpades.png" />
+    <None Include="resources\deck\KingSpades1.png" />
     <Content Include="resources\deck\lose.gif" />
     <Content Include="resources\deck\NineClubs.png" />
+    <None Include="resources\deck\NineClubs1.png" />
     <Content Include="resources\deck\NineDiamonds.png" />
+    <None Include="resources\deck\NineDiamonds1.png" />
     <Content Include="resources\deck\NineHearts.png" />
     <Content Include="resources\deck\NineSpades.png" />
     <Content Include="resources\deck\QueenClubs.png" />
     <Content Include="resources\deck\QueenDiamonds.png" />
     <Content Include="resources\deck\QueenHearts.png" />
     <Content Include="resources\deck\QueenSpades.png" />
+    <None Include="resources\deck\QueenSpades1.png" />
     <Content Include="resources\deck\SevenClubs.png" />
+    <None Include="resources\deck\SevenClubs1.png" />
     <Content Include="resources\deck\SevenDiamonds.png" />
+    <None Include="resources\deck\SevenDiamonds1.png" />
     <Content Include="resources\deck\SevenHearts.png" />
     <Content Include="resources\deck\SevenSpades.png" />
     <Content Include="resources\deck\SixClubs.png" />
